...
            android:id="@+id/section_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToOutline="true"
            >
            <TextView
                android:id="@+id/crear_nueva"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/iniciar_sesion"
                android:textAppearance="@style/crear_nueva"
                android:lineSpacingExtra="2sp"
                android:gravity="center_horizontal|center_vertical"
...
            <com.google.android.material.textfield.TextInputLayout
                style="@style/LoginTextInputLayoutStyle2"
                android:id="@+id/textField5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:hint="@string/email"
                android:paddingHorizontal="4dp"
                app:boxBackgroundColor="@color/white"
                app:endIconMode="clear_text"
                app:hintTextColor="@color/black"
                app:endIconTint="@color/schemesSecondary">

...
                app:boxBackgroundColor="@color/white"
                app:endIconMode="password_toggle"
                app:hintTextColor="@color/black"
                app:endIconTint="@color/schemesSecondary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textAppearanceBodyLarge"
                    android:inputType="textPassword"
                    android:importantForAutofill="yes"
...
            android:layout_below="@id/section_8"
            android:paddingHorizontal="16dp"
            android:paddingVertical="24dp"
            >

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="203dp"
                android:minHeight="62dp"
                android:layout_centerInParent="true"
                android:backgroundTint="@color/schemesOrange600"
...
