...
            android:backgroundTint="@color/schemesOrange600"
            android:text="@string/cancelar"
            android:textColor="@color/colorBackground"
            android:textSize="@dimen/textAppearanceHeadlineSmall" />

        <Button
            android:id="@+id/buttonAcceptCreate"
            android:layout_width="203dp"
            android:layout_height="62dp"
            android:layout_alignParentRight="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="2dp"
...
