...
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        >

        <com.google.android.material.textfield.TextInputLayout
            style="@style/CustomExposedDropdownMenu"
            android:id="@+id/textField4_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:hint="@string/tipo_pago"
            android:paddingHorizontal="4dp"
            app:boxBackgroundColor="@color/white"
...
        android:clipToOutline="true"
        android:layout_below="@id/section_create_order_7"
        android:paddingHorizontal="16dp"
        android:paddingVertical="24dp"
        >
        <Button
            android:id="@+id/buttonCancelCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="180dp"
            android:minHeight="60dp"
            android:background="@drawable/rounded_button"
            android:layout_alignParentStart="true"
...
