...
        android:layout_height="600dp"
        android:clipToOutline="true"
        android:layout_below="@id/section_20"
        android:paddingTop="8dp"
        >
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/clientsRv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:importantForAccessibility="yes"
            android:focusable="true"
            android:focusableInTouchMode="true"
            tools:listitem="@layout/client_item" />
...
