...
        android:importantForAccessibility="no"
        android:focusable="true"
        android:focusableInTouchMode="true"
        >

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardViewClient"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/schemesPrimaryContainerCoffe"
            android:backgroundTint="@color/schemesPrimaryContainerCoffe"
            app:cardCornerRadius="3dp"
            android:layout_marginBottom="2dp"
...
